# fava-fix-uncategorized

./: CLAUDE.md  COPYING  README.md  pyproject.toml
.github/workflows/: test.yml
example/: sample.beancount
src/fava_fix_uncategorized/: FixUncategorized.js  __init__.py
src/fava_fix_uncategorized/templates/: FixUncategorized.html
tests/e2e/: conftest.py  test_frontend.py
tests/unit/: test_api.py  test_fix_uncategorized.py  test_functions.py
